# duo-buildroot-sdk

./: README.md
Zephyr_pedestal/: README.md
Zephyr_pedestal/cvitek/arch/riscv64/: CMakeLists.txt
Zephyr_pedestal/cvitek/driver/common/: CMakeLists.txt
Zephyr_pedestal/cvitek/driver/gpio/: CMakeLists.txt
Zephyr_pedestal/cvitek/driver/gpio/src/: gpio.c
Zephyr_pedestal/cvitek/driver/spinlock/: CMakeLists.txt
Zephyr_pedestal/cvitek/driver/uart/: CMakeLists.txt
Zephyr_pedestal/cvitek/hal/cv180x/pinmux/: CMakeLists.txt
Zephyr_pedestal/cvitek/hal/cv181x/uart/: CMakeLists.txt
Zephyr_pedestal/cvitek/task/comm/: CMakeLists.txt
Zephyr_pedestal/cvitek/task/comm/src/riscv64/: comm_main.c  milkv_duo_io.c
Zephyr_pedestal/cvitek/task/main/: CMakeLists.txt
Zephyr_pedestal/cvitek/task/main/src/: trap.S  trap_handler.c
linux_5.10/drivers/soc/: Kconfig  Makefile
linux_5.10/drivers/soc/openEuler_mcs/: Kconfig  Makefile  mcs.c
linux_5.10/drivers/soc/openEuler_mcs/mcs_cmdqu/: Kconfig  Makefile  rtos_cmdqu.c  rtos_cmdqu.h
uni_pedestal/: README.md  WORK.md
uni_pedestal/cvitek/: build_cv180x.sh
uni_pedestal/cvitek/arch/: CMakeLists.txt
uni_pedestal/cvitek/arch/riscv64/include/: csi_rv64_gcc.h
uni_pedestal/cvitek/arch/riscv64/src/: cache.c  start.S
uni_pedestal/cvitek/common/: CMakeLists.txt
uni_pedestal/cvitek/common/include/interdrv/common/: cvi_debug.h
uni_pedestal/cvitek/driver/: CMakeLists.txt
uni_pedestal/cvitek/driver/common/src/: system.c
uni_pedestal/cvitek/driver/pinmux/: CMakeLists.txt
uni_pedestal/cvitek/driver/rtos_cmdqu/: CMakeLists.txt
uni_pedestal/cvitek/driver/rtos_cmdqu/include/: rtos_cmdqu.h
uni_pedestal/cvitek/driver/rtos_cmdqu/src/: rtos_cmdqu.c
uni_pedestal/cvitek/driver/spinlock/src/: cvi_spinlock.c
uni_pedestal/cvitek/driver/uart/include/: printf.h
uni_pedestal/cvitek/driver/uart/src/: printf.c  putchar.c  uart.c
uni_pedestal/cvitek/hal/cv180x/: CMakeLists.txt
uni_pedestal/cvitek/hal/cv180x/config/: intr_conf.h
uni_pedestal/cvitek/scripts/: cv180x_lscript.ld
uni_pedestal/cvitek/task/comm/include/: pedestal_function.h
uni_pedestal/cvitek/task/comm/src/riscv64/: comm_main.c  milkv_duo_io.h  shutdown.S
uni_pedestal/cvitek/task/main/src/: main.c  trap_handler.c
uniproton/: README.md
uniproton/cvitek/arch/: CMakeLists.txt
uniproton/cvitek/arch/riscv64/: CMakeLists.txt
uniproton/cvitek/arch/riscv64/src/: start.S
uniproton/cvitek/common/include/riscv64/: malloc.h
uniproton/cvitek/common/src/riscv64/: memset.c
uniproton/cvitek/driver/: CMakeLists.txt
uniproton/cvitek/driver/common/src/: system.c
uniproton/cvitek/driver/spinlock/src/: cvi_spinlock.c
uniproton/cvitek/driver/uart/src/: printf.c  puts.c  snprintf.c  uart.c
uniproton/cvitek/hal/cv180x/: CMakeLists.txt
uniproton/cvitek/kernel/: CMakeLists.txt
uniproton/cvitek/scripts/: cv180x_lscript.ld
uniproton/cvitek/task/comm/: CMakeLists.txt
uniproton/cvitek/task/comm/src/riscv64/: comm_main.c  milkv_duo_io.h
uniproton/cvitek/task/main/: CMakeLists.txt
uniproton/cvitek/task/main/src/: main.c  prt_config.c  prt_config.h  trap_handler.c
uniproton/m_uniproton/: build.py  build.sh  config.xml
uniproton/m_uniproton/cmake/common/build_auxiliary_script/: make_lib_rename_file_type.sh
uniproton/m_uniproton/cmake/tool_chain/: milkvduol_riscv64.cmake  uniproton_tool_chain.cmake  uniproton_tool_chain_gcc_riscv64.cmake
uniproton/m_uniproton/demos/riscv64virt/: CMakeLists.txt
uniproton/m_uniproton/src/arch/cpu/riscv64/common/common/: prt_port.c
uniproton/m_uniproton/src/arch/cpu/riscv64/common/hwi/: prt_hw_clint.h
uniproton/m_uniproton/src/arch/cpu/riscv64/common/hwi/board/milkvduol/: platform.h
